load("@cpython//python/private/libffi:config.bzl", "libffi_config")
load("@rules_cc//cc:cc_library.bzl", "cc_library")

package(default_visibility = ["//visibility:public"])

exports_files(["LICENSE"])

config_setting(
    name = "arm64",
    constraint_values = ["@platforms//cpu:aarch64"],
)

config_setting(
    name = "x86_64",
    constraint_values = ["@platforms//cpu:x86_64"],
)

config_setting(
    name = "linux_arm64",
    constraint_values = [
        "@platforms//cpu:aarch64",
        "@platforms//os:linux",
    ],
)

config_setting(
    name = "darwin_arm64",
    constraint_values = [
        "@platforms//cpu:aarch64",
        "@platforms//os:macos",
    ],
)

config_setting(
    name = "darwin_x86_64",
    constraint_values = [
        "@platforms//cpu:x86_64",
        "@platforms//os:macos",
    ],
)

config_setting(
    name = "linux_x86_64",
    constraint_values = [
        "@platforms//cpu:x86_64",
        "@platforms//os:linux",
    ],
)

config_setting(
    name = "windows_arm64",
    constraint_values = [
        "@platforms//cpu:aarch64",
        "@platforms//os:windows",
    ],
)

config_setting(
    name = "windows_x86_64",
    constraint_values = [
        "@platforms//cpu:x86_64",
        "@platforms//os:windows",
    ],
)

libffi_config(name = "libffi_config")

# configure.host selects sysv.S for arm64 on Darwin, Linux, and clang-cl Windows.
ARM64_SOURCES = [
    "src/aarch64/ffi.c",
    "src/aarch64/sysv.S",
]

POSIX_X86_64_SOURCES = [
    "src/x86/ffi64.c",
    "src/x86/ffiw64.c",
    "src/x86/unix64.S",
    "src/x86/win64.S",
]

LIBFFI_TARGET_COMPATIBILITY = select({
    "@platforms//os:linux": [],
    "@platforms//os:macos": [],
    "@platforms//os:windows": [],
    "//conditions:default": ["@platforms//:incompatible"],
}) + select({
    ":arm64": [],
    ":x86_64": [],
    "//conditions:default": ["@platforms//:incompatible"],
})

cc_library(
    name = "libffi",
    copts = select({
        "@platforms//os:windows": [],
        "//conditions:default": ["-fexceptions"],
    }),
    defines = select({
        "@platforms//os:windows": ["FFI_STATIC_BUILD=1"],
        "//conditions:default": [],
    }),
    features = select({
        "@platforms//os:windows": ["dynamic_link_msvcrt"],
        "//conditions:default": [],
    }),
    srcs = [
        "src/closures.c",
        "src/java_raw_api.c",
        "src/prep_cif.c",
        "src/raw_api.c",
        "src/tramp.c",
        "src/types.c",
    ] + select({
        ":arm64": ARM64_SOURCES,
        ":x86_64": POSIX_X86_64_SOURCES,
        ":windows_x86_64": [
            # configure.host classifies clang-cl as Clang and selects win64.S.
            "src/x86/ffiw64.c",
            "src/x86/win64.S",
        ],
        "//conditions:default": [],
    }),
    hdrs = [
        ":libffi_config_ffi_h",
        ":libffi_config_fficonfig_h",
        "include/ffi_cfi.h",
        "include/ffi_common.h",
        "include/tramp.h",
    ] + select({
        ":arm64": [
            "src/aarch64/ffitarget.h",
            "src/aarch64/internal.h",
        ],
        ":x86_64": [
            "src/x86/asmnames.h",
            "src/x86/ffitarget.h",
            "src/x86/internal.h",
            "src/x86/internal64.h",
        ],
    }),
    includes = [
        ".",
        "include",
        "src",
    ] + select({
        ":arm64": ["src/aarch64"],
        ":x86_64": ["src/x86"],
    }),
    target_compatible_with = LIBFFI_TARGET_COMPATIBILITY,
    textual_hdrs = ["src/dlmalloc.c"],
)
