load("@rules_shell//shell:sh_binary.bzl", "sh_binary")

exports_files([
    "build_metadata.bzl",
    "bundled_libraries.bzl",
    "deepfreeze.bzl",
    "generate_sysconfig_json.py",
    "modules.bzl",
    "pyconfig.bzl",
    "pyconfig_contract.c",
    "repositories.bzl",
    "shared_extensions.bzl",
    "test_programs.bzl",
    "upstream_test.sh",
    "upstream_tests.bzl",
    "versions.bzl",
    "windows_static_support.c",
])

sh_binary(
    name = "run_target_python",
    srcs = ["run_target_python.sh"],
    visibility = ["//visibility:public"],
)

sh_binary(
    name = "deepfreeze",
    srcs = ["deepfreeze.sh"],
    visibility = ["//visibility:public"],
)
