load("@rules_cc//cc:cc_binary.bzl", "cc_binary")
load("@rules_shell//shell:sh_binary.bzl", "sh_binary")

exports_files([
    "build_metadata.bzl",
    "bundled_libraries.bzl",
    "deepfreeze.bzl",
    "install_tree.bzl",
    "install_tree_test.sh",
    "install_only.bzl",
    "install_only_mtree.awk",
    "install_only_test.py",
    "install_only_test.sh",
    "modules.bzl",
    "platforms.bzl",
    "pyconfig.bzl",
    "pyconfig_contract.c",
    "repositories.bzl",
    "shared_extensions.bzl",
    "test_programs.bzl",
    "upstream_test.sh",
    "upstream_tests.bzl",
    "versions.bzl",
    "windows_bootstrap_support.c",
    "windows_resource.bzl",
])

sh_binary(
    name = "deepfreeze",
    srcs = ["deepfreeze.sh"],
    visibility = ["//visibility:public"],
)

cc_binary(
    name = "concat_files",
    srcs = ["concat_files.c"],
    visibility = ["//visibility:public"],
)
